@@ -1,5 +1,8 @@
 2009-07-20  Doug Evans  <dje@sebabeach.org>
 
+	* insn.scm (multi-insn-instantiate!): Use logging messages instead of
+	commented out printfs.
+	* rtl.scm (rtl-finish!): Whitespace tweaks.
 	* model.scm (parse-insn-timing): Tweak logging message.
 	* operand.scm: Comment and whitespace tweaks.
 	(op:type): Tweak error message.
